<resources>
    <string name="app_name">ALPR</string>

    <string name="scan">Scan</string>
    <string name="write">Write</string>
    <string name="plate_example">AAA 000</string>
    <string name="check">check</string>
    <string name="status">Status:</string>
    <string name="unknown">unknown</string>
    <string name="example_owner">Example owner</string>
    <string name="company_name">Company Name</string>
    <string name="owner">Owner:</string>
    <string name="company">Company:</string>
    <string name="brand">Brand:</string>
    <string name="car_s_brand">Car\'s Brand</string>
    <string name="model">Model:</string>
    <string name="color">Color:</string>
    <string name="car_s_model">Car\'s Model</string>
    <string name="car_s_color">Car\'s Color</string>
    <string name="car_logo_until_valid_plate_number_is_given">
        car logo until valid plate number is given</string>
    <string name="writeFragment">writeFragment</string>
    <string name="scanFragment">scanFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_license">AAA 000</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dialog_connection_lost">No internet. Please reconnect</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="scanning_title">Scanning</string>
    <string name="writing_title">Writing</string>
    <string name="listing_title">Listing</string>
    <string name="result_image">Result Image Description</string>
    <string name="status_allow">ALLOWED</string>
    <string name="question_enter">Is the car entering?</string>
    <string name="status_forbid">FORBIDDEN</string>
    <string name="question_leave">Is the car leaving?</string>
</resources>
